--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/AlternativeMainView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/AlternativeMainView.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-
+<?import javafx.scene.image.Image?>
 <!--
   ~ Copyright (c)  2020 Dario Lucia (https://www.dariolucia.eu)
   ~
@@ -33,12 +33,18 @@
   ~ limitations under the License.
   -->
 
-<?import javafx.scene.image.Image?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1700.0" stylesheets="@css/MainView.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.AlternativeMainViewController">
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="96.0" prefWidth="200.0" style="-fx-background-color: #191970">
          <children>
-            <Button fx:id="sideButton" layoutX="18.0" layoutY="26.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0">
+            <Button layoutX="18.0" layoutY="26.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" onAction="#sideAction">
+                <graphic>
+                    <ImageView pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/align-justify.svg.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
                <HBox.margin>
                   <Insets left="16.0" />
                </HBox.margin>
@@ -50,18 +56,28 @@
             </Button>
             <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
             <ImageView fitHeight="64.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true">
+                <image>
+                    <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/logos/logo-full-color-320px.png" />
+                </image>
                <HBox.margin>
                   <Insets right="8.0" />
                </HBox.margin>
             </ImageView>
             <Button fx:id="infoButton" layoutX="18.0" layoutY="26.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="64.0" onAction="#aboutAction">
+                <graphic>
+                    <ImageView pickOnBounds="true" preserveRatio="true">
+                        <image>
+                            <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/info.svg.png" />
+                        </image>
+                    </ImageView>
+                </graphic>
                <HBox.margin>
                   <Insets right="16.0" />
                </HBox.margin>
             </Button>
          </children>
       </HBox>
-        <SplitPane dividerPositions="0.2" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+        <SplitPane fx:id="mainSplitter" dividerPositions="0.2" prefHeight="160.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
           <items>
             <Accordion fx:id="sideAccordion" minWidth="0.0">
               <panes>
@@ -71,43 +87,132 @@
                            <content>
                               <VBox fx:id="buttonBox" prefHeight="200.0" prefWidth="100.0">
                                  <children>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Monitoring AND" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
                                          <graphic>
-                                             <ImageView fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
                                                  <image>
-                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/logo.png" />
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/ghost-org-square.svg.png" />
                                                  </image>
                                              </ImageView>
                                          </graphic>
                                         <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/ParameterDataView.fxml"
-                                                    viewName="AND"/>
+                                                    viewName="Monitoring AND"/>
                                      </Button>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Parameter View" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
+                                         <graphic>
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
+                                                 <image>
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/ordered-list.svg.png" />
+                                                 </image>
+                                             </ImageView>
+                                         </graphic>
                                          <properties
                                                  viewLocation="/eu/dariolucia/reatmetric/ui/fxml/ParameterDataLogView.fxml"
-                                                 viewName="Parameters"/>
+                                                 viewName="Parameter View"/>
                                      </Button>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Event View" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
+                                         <graphic>
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
+                                                 <image>
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/thunder.svg.png" />
+                                                 </image>
+                                             </ImageView>
+                                         </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/EventDataView.fxml"
-                                                     viewName="Events"/>
+                                                     viewName="Event View"/>
                                      </Button>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Alarm View" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
+                                         <graphic>
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
+                                                 <image>
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/alert.svg.png" />
+                                                 </image>
+                                             </ImageView>
+                                         </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/AlarmParameterDataView.fxml"
-                                                     viewName="Alarms"/>
+                                                     viewName="Alarm View"/>
                                      </Button>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Raw Data Inspector" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
+                                         <graphic>
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
+                                                 <image>
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/search-folder.svg.png" />
+                                                 </image>
+                                             </ImageView>
+                                         </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/RawDataView.fxml"
-                                                     viewName="Raw Data"/>
+                                                     viewName="Raw Data Inspector"/>
                                      </Button>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Charts" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
+                                         <graphic>
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
+                                                 <image>
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/signal.svg.png" />
+                                                 </image>
+                                             </ImageView>
+                                         </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/UserDisplayView.fxml"
                                                      viewName="Charts"/>
                                      </Button>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Mimics" mnemonicParsing="false" prefHeight="64.0" minHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
+                                         <graphic>
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
+                                                 <image>
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/sitemap.svg.png" />
+                                                 </image>
+                                             </ImageView>
+                                         </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/MimicsDisplayView.fxml"
                                                      viewName="Mimics"/>
                                      </Button>
-                                     <Button mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                     <Button text="Operational Messages" mnemonicParsing="false" prefHeight="64.0" onAction="#viewAction" disable="true">
+                                         <style>
+                                             -fx-alignment: LEFT;
+                                             -fx-font-size: 14pt;
+                                             -fx-font-weight: bold;
+                                         </style>
+                                         <graphic>
+                                             <ImageView pickOnBounds="true" preserveRatio="true">
+                                                 <image>
+                                                     <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/48px/messages.svg.png" />
+                                                 </image>
+                                             </ImageView>
+                                         </graphic>
                                          <properties viewLocation="/eu/dariolucia/reatmetric/ui/fxml/OperationalMessageView.fxml"
                                                      viewName="Operational Messages"/>
                                      </Button>
