--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityInvocationDialog.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityInvocationDialog.fxml
@@ -51,7 +51,7 @@
             <ChoiceBox fx:id="routeChoiceBox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
-      <Accordion VBox.vgrow="ALWAYS">
+      <Accordion fx:id="accordion" VBox.vgrow="ALWAYS">
         <panes>
           <TitledPane animated="false" text="Arguments">
                <content>
@@ -87,6 +87,6 @@
       </HBox>
    </children>
    <padding>
-      <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+      <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
    </padding>
 </VBox>
